--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ langchain>=0.2.0
 langgraph>=0.0.31
 openai>=1.13.3
 
-faiss-cpu==1.7.4
 
 spacy==3.7.2
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl
@@ -21,3 +20,4 @@ numpy==1.26.4
 pandas==2.2.1
 
 python-dotenv==1.0.1
+faiss-cpu-prebuilt==1.7.2
